--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.543.0",
-    "next": "15.5.3",
+    "next": "^16.1.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -51,7 +51,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^16.1.3",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lighthouse": "^13.0.1",
